--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "execa": "^6.1.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "less": "^4.1.3",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
