--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ado-node": "^2.0.1",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
+    "echarts": "^5.4.0",
     "element-plus": "^2.2.19",
     "execa": "^6.1.0",
     "express": "^4.18.1",
