--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/express-ws": "^3.0.1",
     "ado-node": "^2.0.1",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
@@ -22,12 +23,14 @@
     "element-plus": "^2.2.19",
     "execa": "^6.1.0",
     "express": "^4.18.1",
+    "express-ws": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "pinia": "^2.0.23",
+    "read-package": "^1.0.2",
     "redis": "^4.3.1",
     "ts-node": "^10.9.1",
     "urllib": "^3.3.1",
