--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "ado-cloud",
-  "private": true,
+  "name": "app",
   "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm run dev:server & npm run dev:client",
-    "dev:server": "ts-node-dev --project tsconfig.server.json src/index.ts",
-    "dev:client": "vite",
-    "build": "npm run build:client & npm run build:server",
-    "build:client": "vite build",
-    "build:server": "tsc --project tsconfig.server.json",
-    "preview": "vite preview & node dist/index.js",
-    "start": "node dist/server.js"
+    "test": "tar -zcvf AdoSsrDemo1.tgz ./dist package.json node_modules package-lock.json index.html ",
+    "dev": "ado-cli run-ssr vite",
+    "build": "ado-cli build-ssr vite",
+    "preview": "ado-cli preview vite",
+    "release": "ado-cli release AdoNodeTestServer.tgz"
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
     "@types/express-ws": "^3.0.1",
-    "ado-node": "^2.0.1",
+    "ado-node": "^3.1.3",
     "axios": "^1.1.3",
     "cors": "^2.8.5",
     "echarts": "^5.4.0",
@@ -39,17 +34,19 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.1",
     "@types/execa": "^2.0.0",
     "@types/express": "^4.17.13",
+    "@types/html-minifier-terser": "^7.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.186",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.6.3",
-    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitejs/plugin-vue": "^2.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.7",
+    "vite": "2.6.10",
     "vue-tsc": "^0.39.5"
   }
 }
