--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,14 @@
   "compilerOptions": {
     "target": "ESNext",
     "declaration": true,
-    "module": "CommonJS",
+    "module": "ESNext",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "types": [ "node"],
+    "types": [ "node","vite/client"],
     "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
